# DjangoGraphQL

./: .gitignore  pyproject.toml
apps/users/: admin.py  models.py
config/: asgi.py  settings.py  urls.py  wsgi.py
