[tool.poetry]
name = "GraphQLDjango"
version = "0.1.0"
description = ""
authors = ["Nilber Remon <nilberremon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
psycopg2 = "^2.8.6"
Django = "^3.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
